  .----------------------.
--|   X-Chat ChangeLog   |--------------------------------------------
  `----------------------'

----------------------------------------------------------------------
 2.0.4
----------------------------------------------------------------------

 - Updated translations (lt).
 - Fixed crash on tinted transparency (xc203-fixtint.diff).
 - Allow fullpath and relative filenames for Text Events sound files
   (Anthony Dragunov).
 - Added /GUI command (mainly for use by scripts).
 - Added -n, --no-plugins command-line arg.
 - Added a feature to change the color of away users.
 - Fixed incorrect dcc cps calculation.
 - 
 - 


----------------------------------------------------------------------
 2.0.3
----------------------------------------------------------------------

 - Updated translations (ca, fr, ja, sv).
 - Fixed URL grabber not filling up (xc202-fixurlg.diff).
 - Fixed crash when holding down Ctrl-I (xc202-fixdetach.diff).
 - Use Shift-Ctrl-W for Close only when Emacs key theme is enabled.
 - Fixed corrupt left margin with indent-nicks off and timestamp on.
 - Remove invalid chars from inbound text when conversion fails. Fall
   back to ISO-8859-1 when using UTF-8 only (Ilya Konstantinov).
 - Fixed perl IRC::get_info(3) crash when not connected [732496].
 - Fixed crash on long output lines for /exec -o [731187].
 - Made "Move completed files to:" and "Save nickname in filenames"
   work at the same time (Matthew Gabeler-Lee).
 - xtext: fix redraw when new additions not on current page.
 - win32: Added /set identd 0 switch to turn off built-in identd. 
 - Added 6-8 for perl's IRC::get_info to retreive network, host and
   topic (Ryan).
 - Iterate in alpha order instead of op-alpha for nickcompletion
   (Gauss_Z88).
 - Fixed ChannelList crash on invalid regex match string.
 - Added hide join/parts setting to gui (Jason Wies).
 - Added Delete All button to ignore window (Mohammed Sameer).